welcome.lessons.welcome.bat.bool2.LessBy10.scala.error
lessBy10:2: error: overloaded method value max with alternatives:
  (x$1: Double,x$2: Double)Double <and>
  (x$1: Float,x$2: Float)Float <and>
  (x$1: Long,x$2: Long)Long <and>
  (x$1: Int,x$2: Int)Int
 cannot be applied to (Int, Int, Int)
  return (Math.max(a,b,c)-Math.min(a,b,c) >= 10)
               ^lessBy10:2: error: overloaded method value min with alternatives:
  (x$1: Double,x$2: Double)Double <and>
  (x$1: Float,x$2: Float)Float <and>
  (x$1: Long,x$2: Long)Long <and>
  (x$1: Int,x$2: Int)Int
 cannot be applied to (Int, Int, Int)
  return (Math.max(a,b,c)-Math.min(a,b,c) >= 10)
                               ^