welcome.lessons.welcome.bat.bool2.LessBy10.scala.code
def lessBy10(a:Int, b:Int, c:Int):Boolean = {
  return (Math.max(a,b,c)-Math.min(a,b,c) >= 10)
}